draft AiWheelCountExtractor implementation